exports[`test PokemonRow renders a "catch!" when pokemon is not my pokemon and style color red 1`] = `
<li>
  <span
    onClick={[Function]}
    style={Object {}}>
    pikachu
  </span>
  <button
    onClick={[Function]}>
    catch!
  </button>
</li>
`;

exports[`test PokemonRow renders a "set free.." when pokemon is my pokemon 1`] = `
<li>
  <span
    onClick={[Function]}
    style={
      Object {
        "color": "red",
      }
    }>
    pikachu
  </span>
  <button
    onClick={[Function]}>
    set free..
  </button>
</li>
`;

exports[`test PokemonRow renders pokemon name catch button and handle data change 1`] = `
<li>
  <span
    onClick={[Function]}
    style={Object {}}>
    pikachu
  </span>
  <button
    onClick={[Function]}>
    catch!
  </button>
</li>
`;
